src/objects/MICO_Process_Step__c.object
<CustomObject>
    <description>Business Description: This object is used to store detailed processes in order to group user stories and understand how business processes are being delivered

Used In: Mission Control App</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <externalId>true</externalId>
        <label>External Reference</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HL_Process__c</fullName>
        <label>High Level Process</label>
        <referenceTo>MICO_Processes__c</referenceTo>
        <relationshipName>Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inputs__c</fullName>
        <label>Inputs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outputs__c</fullName>
        <label>Outputs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>Participants</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Step</label>
        <referenceTo>MICO_Process_Step__c</referenceTo>
        <relationshipName>Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Hiearchy__c</fullName>
        <externalId>true</externalId>
        <label>Process Hiearchy</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <label>Step Type</label>
        <picklist>
            <picklistValues>
                <fullName>Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing System Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New System Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Variation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Process Step</label>
    <nameField>
        <label>Process Step Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>